--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,49 @@
-*{
-    
-}
 body{
-    margin:60px;
+    margin:20px 60px;
+    background-color: #ffe5b6;
 }
 .container{
-    background-color: white;
     display: flex;
     margin: 0 auto;
     flex-wrap: wrap;
-    max-width: 900px;
-    border: 5px solid black;
-    
+    max-width: 620px;
+    aspect-ratio: 1 / 1;
+    border: 10px solid #292521;
+}
+.buttons_wrapper{
+    display: flex;
+    justify-content: space-between;
+    max-width: 620px;
+    margin: 0 auto 40px;
 }
 .pixel{
-    width: 6.25%;
-    aspect-ratio : 1 / 1;
+    aspect-ratio: 1 / 1;
     box-sizing: border-box;
-    background-color: white
-    border: 1px solid black;
     cursor: pointer;
+}
+
+button{
+    display: block;
+    background-color: unset;
+    color: #292521;
+    border: 4px solid #229091;
+    font-family: sans-serif;
+    font-size: 32px;
+    cursor: pointer;
+    padding: .1em .6em;
+    font-weight: bold;  
+}
+
+button:hover{
+    background-color: #229091;
+    color: white;
+}
+
+button#reset{
+    border: 4px solid #912231;
+}
+
+button#reset:hover{
+    background-color: #912231;
+    color: white;
 }
