--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body{
     aspect-ratio: 1 / 1;
     border: 10px solid #292521;
 }
-.buttons_wrapper{
+.wrapper{
     display: flex;
     justify-content: space-between;
     max-width: 620px;
