--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,15 @@ button#reset:hover{
     background-color: #912231;
     color: white;
 }
+
+
+label{
+    font-family: sans-serif;
+    font-size: 24px;
+}
+
+.draw_type{
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
